Changelog for pdoTools.

2.11.4 pl
==============
- [Fenom] More security fixes from Sergey Shlokov.

2.11.3 pl
==============
- Added French lexicon entries.

2.11.2 pl
==============
- Fix detection of element names starting with a number.

2.11.1 pl
==============
- Faster processing of static files.

2.11.0 pl
==============
- [pdoFetch] Added "setTotal" option to enable calculating all rows ("SQL_CALC_FOUND_ROWS"), which will also result in the "totalVar" placeholder is being set.
- [pdoFetch] Option "setTotal" disabled by default.
- [pdoPage] Forces "setTotal" to provide pagination.

2.10.6 pl
==============
- Improved German lexicons.

2.10.5 pl
==============
- [pdoTools] Ability to return array from "prepareSnippet" for more performance.
- [FenomX] Fixed method "getStore".

2.10.4 pl
==============
- [Fenom] Do not output raw tags if there was a compile errors.
- [#266] [pdoMenu] Fixed the setting of "here" and "self" classes.
- [#261] [Fenom] Fixed unexpected behavior of the fenom tag "ignore".

2.10.3 pl
==============
- Improved compatibility with PHP 7.2
- [pdoFetch] Ability to use arrays in "&sortby".

2.10.2 pl
==============
- [Fenom] Improved processing of caching snippets inside uncached.

2.10.1 pl
==============
- [#256] [Fenom] Fixed bug with caching of scripts and styles.
- [pdoPage] "&setMeta" now works when "&cache=`1`".
- [Fenom] Improved regular expression to detect Fenom syntax.

2.10.0 pl
==============
- [#259] [pdoFetch] Fixed error when passed pure SQL into "having" parameter.
- [#258] [pdoPage] Canonical urls always must be "full".
- [#245] [pdoMenu] Ability to use conditional tpls instead of regular "tpl".
- [#121] [pdoMenu] Improved work of specified chunks with weblinks.

2.9.3 pl
==============
- [#255] [Fenom] New system setting "pdotools_fenom_save_on_errors" to save code on compilation errors in the cache directory for later debugging.

2.9.2 pl
==============